--- a/css/slide.css
+++ b/css/slide.css
@@ -9,7 +9,7 @@
   height: 400px;
   border-radius: 4px;
   overflow: hidden;
-  box-shadow: 0 2px 4px rgba(0,0,0,.4);
+  box-shadow: 6px 6px 6px #e3e3e3;
   object-fit: cover;
 }
 
