--- a/css/produtos.css
+++ b/css/produtos.css
@@ -9,13 +9,14 @@
   margin: 60px auto 20px auto;
 }
 
-.cards h1{
+.cards h1 {
   margin: 20px;
   font-family: "irish Grover", sans-serif;
   font-weight: 600;
-  font-size: 1.725rem;
+  font-size: 1.625rem;
 }
-.cards p,.cards span {
+.cards p,
+.cards span {
   font-family: "irish Grover", sans-serif;
   padding-top: 10px;
   font-size: 1.125rem;
@@ -27,21 +28,27 @@
   justify-content: center;
   max-width: 1300px;
   margin: 0 auto 60px auto;
-  }
-  .cards-item {
-    display: flex;
-    flex-direction: column;
-    max-width: 100%;
-    min-width: 150px;
-    justify-content: space-between;
-    margin: 10px;
-    padding: 20px;
-    background-color: #e3e3e3;
+}
+.cards-item img {
+  height: 250px;
+  object-fit: contain;
+}
+.cards-item {
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  min-width: 200px;
+  justify-content: space-between;
+  margin: 10px;
+  padding: 20px;
+  background-color: #ffffff;
+  border: 2px solid #00000050;
+  box-shadow: 6px  6px 6px #e3e3e3;
+  border-radius: 4px;
+}
+.price {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  
-  }
-  .price {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
