--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import url(/css/footer.css);
 @import url(/css/dadosNoTopo.css);
 @import url(/css/lancados.css);
+@import url(/css/mediaQuery.css);
 body,
 a,
 p,
@@ -20,4 +21,5 @@ img {
 body {
   max-width: 1400px;
   margin: 0 auto;
+  position: relative;
 }
