--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import url(/css/dadosNoTopo.css);
 @import url(/css/lancados.css);
 @import url(/css/mediaQuery.css);
+@import url(/css/simple-slide.css);
 body,
 a,
 p,
