--- a/css/slide.css
+++ b/css/slide.css
@@ -5,8 +5,8 @@
 }
 
 .slide img{
-  width: 100%;
-  height: 400px;
+  max-width: 100%;
+  height: 600px;
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 6px 6px 6px #e3e3e3;
