--- a/css/slide.css
+++ b/css/slide.css
@@ -1,16 +1,14 @@
 .slide {
   display: flex;
   gap: 20px;
-  overflow: hidden;
+  justify-content: center;
 }
 
-.slide img{
+.slide img {
   max-width: 100%;
-  height: 600px;
+  height: 500px;
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 6px 6px 6px #e3e3e3;
   object-fit: cover;
 }
-
-
