--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-@import url(/css/contato.css);
-@import url(/css/produtos.css);
-@import url(/css/sobre.css);
-@import url(/css/slide.css);
-@import url(/css/footer.css);
-@import url(/css/dadosNoTopo.css);
-@import url(/css/lancados.css);
-@import url(/css/mediaQuery.css);
-@import url(/css/simple-slide.css);
+@import url(css/contato.css);
+@import url(css/produtos.css);
+@import url(css/sobre.css);
+@import url(css/slide.css);
+@import url(css/footer.css);
+@import url(css/dadosNoTopo.css);
+@import url(css/lancados.css);
+@import url(css/mediaQuery.css);
+@import url(css/simple-slide.css);
 body,
 a,
 p,
