--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -148,4 +148,48 @@
   .menu nav img {
     max-width: 100%;
   }
+  .form-Cliente {
+    font-family: "lacquer", sans-serif;
+    font-weight: 600;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    margin: 10px;
+  }
+  .row-1,.row-2,.row-3,.row-4,.row-5,.row-6,.row-7 {
+  grid-column: 1/3;
+  }
+  #row-1 {
+    grid-row: 1;
+  }
+  #row-2 {
+    grid-row: 2;
+  }
+  #row-3 {
+    grid-row: 3;
+  }
+  #row-4 {
+    grid-row: 4;
+  }
+  #row-5 {
+    grid-row: 5;
+  }
+  #row-6 {
+    grid-row: 6;
+  }
+  #row-7 {
+    grid-row: 7;
+  }
+  #row-8 {
+    grid-row: 8;
+  }
+  #row-9 {
+    grid-row: 9;
+  }
+  #row-10 {
+    grid-row: 10;
+  }
+  #row-11 {
+    grid-row: 11;
+  }
 }
