--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -160,39 +160,39 @@
   grid-column: 1/3;
   }
   #row-1 {
-    grid-row: 1;
+    grid-row: 1 !important;
   }
   #row-2 {
-    grid-row: 2;
+    grid-row: 2 !important;
   }
   #row-3 {
-    grid-row: 3;
+    grid-row: 3 !important;
   }
   #row-4 {
-    grid-row: 4;
+    grid-row: 4 !important;
   }
   #row-5 {
-    grid-row: 5;
+    grid-row: 5 !important;
   }
   #row-6 {
-    grid-row: 6;
+    grid-row: 6 !important;
   }
   #row-7 {
-    grid-row: 7;
+    grid-row: 7 !important;
   }
   #row-8 {
-    grid-row: 8;
+    grid-row: 8 !important;
   }
   #row-9 {
-    grid-row: 9;
+    grid-row: 9 !important;
   }
   #row-10 {
-    grid-row: 10;
+    grid-row: 10 !important;
   }
   #row-11 {
-    grid-row: 11;
+    grid-row: 11 !important;
   }
   .sobre {
-    padding: 10px;
+    padding: 10px !important;
   }
 }
