--- a/css/dadosNoTopo.css
+++ b/css/dadosNoTopo.css
@@ -6,6 +6,12 @@
   border: 2px solid #00000065;
   font-family: "irish grover", Serif;
   font-weight: 600;
+  background-image: linear-gradient(
+    35deg,
+    #00923f 0%,
+    #fef400 50%,
+    #da251c 100%
+  );
 }
 .icons,
 .icons div {
