--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,11 @@
 footer {
   background: #e3e3e3;
+  background-image: linear-gradient(
+    35deg,
+    #00923f 0%,
+    #fef400 50%,
+    #da251c 100%
+  );
 }
 h3,
 li {
@@ -52,5 +58,5 @@ footer img {
   font-family: "irish Grover", sans-serif;
   display: grid;
   justify-content: center;
-  padding:120px 20px 30px 60px;
+  padding: 120px 20px 30px 60px;
 }
