--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -73,7 +73,8 @@
   .videos-conteiner h3 {
     font-size: 1.25rem;
   }
-  .container-contato h2, .container-contato .endereco li {
+  .container-contato h2,
+  .container-contato .endereco li {
     font-size: 1rem;
   }
   .container-endereco img {
@@ -112,7 +113,8 @@
   .videos-conteiner iframe {
     max-width: 100%;
   }
-  .container-contato h2, .container-contato .endereco li {
+  .container-contato h2,
+  .container-contato .endereco li {
     font-size: 0.75rem;
   }
   .container-endereco {
@@ -127,7 +129,7 @@
   }
 }
 @media screen and (max-width: 560px) {
-  .dados-do-topo {
+  .dados-do-topo .icons div:last-child {
     display: none;
   }
   .dados-enderecos h3,
@@ -156,8 +158,14 @@
     gap: 10px;
     margin: 10px;
   }
-  .row-1,.row-2,.row-3,.row-4,.row-5,.row-6,.row-7 {
-  grid-column: 1/3;
+  .row-1,
+  .row-2,
+  .row-3,
+  .row-4,
+  .row-5,
+  .row-6,
+  .row-7 {
+    grid-column: 1/3;
   }
   #row-1 {
     grid-row: 1 !important;
