--- a/css/dadosNoTopo.css
+++ b/css/dadosNoTopo.css
@@ -29,7 +29,7 @@
   justify-content: space-between;
   justify-items: center;
   align-items: center;
-  padding: 40px 30px;
+  padding: 20px 30px;
 }
 .menu > nav > ul {
   display: flex;
@@ -37,6 +37,9 @@
   font-family: "Lacquer", cursive;
   font-size: 2rem;
   font-weight: 600;
+}
+.menu ul li:hover {
+  text-shadow: 2px 2px 2px #00000065;
 }
 .logoTipo {
   width: 60px;
