--- a/css/slide.css
+++ b/css/slide.css
@@ -1,14 +1,20 @@
 .slide {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   justify-content: center;
 }
 
 .slide img {
   max-width: 100%;
-  height: 500px;
+  height: 400px;
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 6px 6px 6px #e3e3e3;
   object-fit: cover;
+}
+
+@media screen and (max-width: 560px) {
+  .mediaQueries-d-none {
+    display: none;
+  }
 }
